# AI4ScientificCoding

./: .gitignore  README.md  RESEARCH_DATA_DEPLOYMENT.md  compose.research.yaml
.github/workflows/: build-notebook-image.yml
cline-persona/: README.md  pyproject.toml
cline-persona/ai4scientificcoding_cline_tutor/: __init__.py  persona.py
cline-vscode-integration/: Dockerfile  README.md  jupyterhub_config.py  start-code-server.sh
jupyter-ai/: README.md  persona.py  pyproject.toml
jupyter-ai/jupyter_ai_jupyternaut/: __init__.py  persona.py
jupyterhub/: Dockerfile  Dockerfile.notebook  README.md  jupyter_server_config.py  jupyterhub_config.py  migrate-user-storage.sh  notebook-requirements.txt  participant-id.py  requirements.txt  start-jupyterhub.sh
llm-proxy/: Dockerfile  README.md  pyproject.toml
llm-proxy/llm_proxy/: __init__.py  app.py
llm-proxy/tests/: test_gateway.py
opencode-jetstream-deployment/: README.md  deployment.sh
openwebui/: README.md  setup.sh
workshop/: .env.example  Caddyfile  Docker compose  Dockerfile  README.md  build.sh  env.example  jupyter_server_config.py  jupyterhub_config.py  marimo.toml  setup.sh
