[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai4scientificcoding-cline-tutor"
version = "0.1.0"
description = "Neural Networks Teaching Assistant persona for Cline VS Code extension and CLI"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["ai4scientificcoding_cline_tutor*"]
