[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai4scientificcoding-llm-proxy"
version = "0.1.0"
description = "Local FastAPI logging proxy for LLM traffic"
requires-python = ">=3.10"
dependencies = [
	"fastapi>=0.115",
	"httpx>=0.27",
	"uvicorn>=0.30",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_proxy*"]